force-app/main/default/objects/sugati__XE_Settings__c/sugati__XE_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>XE Settings</label>
</CustomObject>