force-app/main/default/objects/sugati__XE_Settings__c/fields/sugati__Increased_Per__c.field-meta.xml
<CustomField>
    <fullName>sugati__Increased_Per__c</fullName>
    <label>Increased %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>