force-app/main/default/objects/sugati__XE_Settings__c/fields/sugati__Is_Test__c.field-meta.xml
<CustomField>
    <fullName>sugati__Is_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Test</label>
    <type>Checkbox</type>
</CustomField>