force-app/main/default/objects/sugati__XE_Settings__c/fields/sugati__Password__c.field-meta.xml
<CustomField>
    <fullName>sugati__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>