force-app/main/default/objects/sugati__XE_Settings__c/fields/sugati__Username__c.field-meta.xml
<CustomField>
    <fullName>sugati__Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>